# 2022-advent-of-code

./: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  18.cpp  19.cpp  20.cpp  21.cpp  CMakeLists.txt  ParserHelper.h  README.md
